regions/tokyo/ASG_Tokyo 5-Route.tf
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.lionsdenASG.id

  route = [
    {
      cidr_block                 = "0.0.0.0/0"
      nat_gateway_id             = aws_nat_gateway.nat.id
      carrier_gateway_id         = ""
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      gateway_id                 = ""
      instance_id                = ""
      ipv6_cidr_block            = ""
      local_gateway_id           = ""
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_endpoint_id            = ""
      vpc_peering_connection_id  = ""
    },
  ]

  tags = {
    Name = "private"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.lionsdenASG.id

  route = [
    {
      cidr_block                 = "0.0.0.0/0"
      gateway_id                 = aws_internet_gateway.igw.id
      nat_gateway_id             = ""
      carrier_gateway_id         = ""
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      instance_id                = ""
      ipv6_cidr_block            = ""
      local_gateway_id           = ""
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_endpoint_id            = ""
      vpc_peering_connection_id  = ""
    },
  ]

  tags = {
    Name = "public"
  }
}

resource "aws_route_table_association" "private-ap-northeast-1a" {
  subnet_id      = aws_subnet.private-ap-northeast-1a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-ap-northeast-1c" {
  subnet_id      = aws_subnet.private-ap-northeast-1c.id
  route_table_id = aws_route_table.private.id
}

#public

resource "aws_route_table_association" "public-ap-northeast-1a" {
  subnet_id      = aws_subnet.public-ap-northeast-1a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-ap-northeast-1c" {
  subnet_id      = aws_subnet.public-ap-northeast-1c.id
  route_table_id = aws_route_table.public.id
}


# Route to Sydney VPC
# resource "aws_route" "tokyo_to_australia-route" {
#   route_table_id            = aws_route_table.tokyo_private_rt.id
#   destination_cidr_block    = aws_vpc.australia-vpc.cidr_block
#   vpc_peering_connection_id = aws_vpc_peering_connection.tokyo_australia-peering.id
# }

# # Route to New York VPC
# resource "aws_route" "tokyo_to_newyork_route" {
#   route_table_id            = aws_route_table.tokyo_private_rt.id
#   destination_cidr_block    = aws_vpc.new-york-vpc.cidr_block
#   vpc_peering_connection_id = aws_vpc_peering_connection.tokyo_newyork_peering.id
# }
